--- a/index.html
+++ b/index.html
@@ -53,6 +53,44 @@
 		</nav>
 <!-- nav ends -->
 
+<!-- jumbotron begins -->
+<div class="jumbotron">
+  <h1 class="display-4">JUMBOTRON</h1>
+  <p class="lead">We like bootstrap because it allows us to make websites responsive with ease.</p>
+  <hr class="my-4">
+  <p>The toolkits in bootstrap are very useful for web development!</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
+</div>
+<!-- jumbotron ends -->
+
+<!-- containers begin -->
+<div class="container">
+  <div class="row">
+    <div class="col-3 mx-auto">
+      <h2>
+				<img class="w-50" src="https://content.linkedin.com/content/dam/brand/site/img/logo/logo-hero.png">
+					<!-- linkedin button -->
+					<input class="btn btn-primary" type="button" value="Learn More" onclick="window.location.href='https://www.linkedin.com/feed/'"/>
+			</h2>
+    </div>
+    <div class="col-3 mx-auto">
+			<h2>
+				<img class="w-50" src="https://blogs.microsoft.com/uploads/2012/08/8867.Microsoft_5F00_Logo_2D00_for_2D00_screen.jpg">
+					<!-- microsoft button -->
+					<input class="btn btn-secondary" type="button" value="Learn More" onclick="window.location.href='https://www.microsoft.com/en-us/'"/>
+			</h2>
+    </div>
+    <div class="col-3 mx-auto">
+			<h2>
+				<img class="w-50" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Apple_logo_black.svg/2000px-Apple_logo_black.svg.png">
+					<!-- apple button -->
+					<input class="btn btn-success" type="button" value="Learn More" onclick="window.location.href='https://www.apple.com/'"/>
+			</h2>
+    </div>
+  </div>
+</div>
 
 	</body>
 </html>
